[gd_scene load_steps=12 format=2]

[ext_resource path="res://Scripts/level_selection.gd" type="Script" id=1]
[ext_resource path="res://Scenes/level_button.tscn" type="PackedScene" id=2]
[ext_resource path="res://Fonts/Poppins-SemiBold.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://Fonts/Poppins-Regular.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://Scenes/main_menu_animation.tscn" type="PackedScene" id=5]
[ext_resource path="res://Scripts/level_buttons.gd" type="Script" id=6]
[ext_resource path="res://Scripts/main_menu.gd" type="Script" id=7]
[ext_resource path="res://Sprites/back_button.png" type="Texture" id=8]

[sub_resource type="DynamicFont" id=1]
size = 120
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=2]
size = 90
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=3]
size = 70
font_data = ExtResource( 4 )

[node name="level_selection" type="Node2D"]
script = ExtResource( 1 )

[node name="level_buttons" type="Node2D" parent="."]
position = Vector2( 1080, 0 )
script = ExtResource( 6 )

[node name="1" parent="level_buttons" instance=ExtResource( 2 )]
margin_left = 144.0
margin_top = 192.0
margin_right = 294.0
margin_bottom = 342.0
level_num = 1

[node name="2" parent="level_buttons" instance=ExtResource( 2 )]
margin_left = 360.0
margin_top = 192.0
margin_right = 510.0
margin_bottom = 342.0
level_num = 2

[node name="3" parent="level_buttons" instance=ExtResource( 2 )]
margin_left = 576.0
margin_top = 192.0
margin_right = 726.0
margin_bottom = 342.0
level_num = 3

[node name="4" parent="level_buttons" instance=ExtResource( 2 )]
margin_left = 792.0
margin_top = 192.0
margin_right = 942.0
margin_bottom = 342.0
level_num = 4

[node name="5" parent="level_buttons" instance=ExtResource( 2 )]
margin_left = 144.0
margin_top = 408.0
margin_right = 294.0
margin_bottom = 558.0
level_num = 5

[node name="6" parent="level_buttons" instance=ExtResource( 2 )]
margin_left = 360.0
margin_top = 408.0
margin_right = 510.0
margin_bottom = 558.0
level_num = 6

[node name="7" parent="level_buttons" instance=ExtResource( 2 )]
margin_left = 576.0
margin_top = 408.0
margin_right = 726.0
margin_bottom = 558.0
level_num = 7

[node name="8" parent="level_buttons" instance=ExtResource( 2 )]
margin_left = 792.0
margin_top = 408.0
margin_right = 942.0
margin_bottom = 558.0
level_num = 8

[node name="9" parent="level_buttons" instance=ExtResource( 2 )]
margin_left = 144.0
margin_top = 624.0
margin_right = 294.0
margin_bottom = 774.0
level_num = 9

[node name="10" parent="level_buttons" instance=ExtResource( 2 )]
margin_left = 360.0
margin_top = 624.0
margin_right = 510.0
margin_bottom = 774.0
level_num = 10

[node name="11" parent="level_buttons" instance=ExtResource( 2 )]
margin_left = 576.0
margin_top = 624.0
margin_right = 726.0
margin_bottom = 774.0
level_num = 11

[node name="12" parent="level_buttons" instance=ExtResource( 2 )]
margin_left = 792.0
margin_top = 624.0
margin_right = 942.0
margin_bottom = 774.0
level_num = 12

[node name="13" parent="level_buttons" instance=ExtResource( 2 )]
margin_left = 144.0
margin_top = 840.0
margin_right = 294.0
margin_bottom = 990.0
level_num = 13

[node name="14" parent="level_buttons" instance=ExtResource( 2 )]
margin_left = 360.0
margin_top = 840.0
margin_right = 510.0
margin_bottom = 990.0
level_num = 14

[node name="15" parent="level_buttons" instance=ExtResource( 2 )]
margin_left = 576.0
margin_top = 840.0
margin_right = 726.0
margin_bottom = 990.0
level_num = 15

[node name="16" parent="level_buttons" instance=ExtResource( 2 )]
margin_left = 792.0
margin_top = 840.0
margin_right = 942.0
margin_bottom = 990.0
level_num = 16

[node name="17" parent="level_buttons" instance=ExtResource( 2 )]
margin_left = 144.0
margin_top = 1056.0
margin_right = 294.0
margin_bottom = 1206.0
level_num = 17

[node name="18" parent="level_buttons" instance=ExtResource( 2 )]
margin_left = 360.0
margin_top = 1056.0
margin_right = 510.0
margin_bottom = 1206.0
level_num = 18

[node name="19" parent="level_buttons" instance=ExtResource( 2 )]
margin_left = 576.0
margin_top = 1056.0
margin_right = 726.0
margin_bottom = 1206.0
level_num = 19

[node name="20" parent="level_buttons" instance=ExtResource( 2 )]
margin_left = 792.0
margin_top = 1056.0
margin_right = 942.0
margin_bottom = 1206.0
level_num = 20

[node name="21" parent="level_buttons" instance=ExtResource( 2 )]
margin_left = 144.0
margin_top = 1272.0
margin_right = 294.0
margin_bottom = 1422.0
level_num = 21

[node name="22" parent="level_buttons" instance=ExtResource( 2 )]
margin_left = 360.0
margin_top = 1272.0
margin_right = 510.0
margin_bottom = 1422.0
level_num = 22

[node name="23" parent="level_buttons" instance=ExtResource( 2 )]
margin_left = 576.0
margin_top = 1272.0
margin_right = 726.0
margin_bottom = 1422.0
level_num = 23

[node name="24" parent="level_buttons" instance=ExtResource( 2 )]
margin_left = 792.0
margin_top = 1272.0
margin_right = 942.0
margin_bottom = 1422.0
level_num = 24

[node name="25" parent="level_buttons" instance=ExtResource( 2 )]
margin_left = 144.0
margin_top = 1488.0
margin_right = 294.0
margin_bottom = 1638.0
level_num = 25

[node name="26" parent="level_buttons" instance=ExtResource( 2 )]
margin_left = 360.0
margin_top = 1488.0
margin_right = 510.0
margin_bottom = 1638.0
level_num = 26

[node name="27" parent="level_buttons" instance=ExtResource( 2 )]
margin_left = 576.0
margin_top = 1488.0
margin_right = 726.0
margin_bottom = 1638.0
level_num = 27

[node name="28" parent="level_buttons" instance=ExtResource( 2 )]
margin_left = 792.0
margin_top = 1488.0
margin_right = 942.0
margin_bottom = 1638.0
level_num = 28

[node name="29" parent="level_buttons" instance=ExtResource( 2 )]
margin_left = 360.0
margin_top = 1704.0
margin_right = 510.0
margin_bottom = 1854.0
level_num = 29

[node name="30" parent="level_buttons" instance=ExtResource( 2 )]
margin_left = 576.0
margin_top = 1704.0
margin_right = 726.0
margin_bottom = 1854.0
level_num = 30

[node name="back_button" type="TextureButton" parent="level_buttons"]
margin_right = 100.0
margin_bottom = 100.0
texture_normal = ExtResource( 8 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="move_tween" type="Tween" parent="level_buttons"]

[node name="main_menu" type="Node2D" parent="."]
script = ExtResource( 7 )

[node name="title" type="Label" parent="main_menu"]
margin_right = 450.0
margin_bottom = 192.0
rect_pivot_offset = Vector2( 225, 96 )
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "SHAPEZ"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="play_btn" type="Button" parent="main_menu"]
margin_top = 600.0
margin_right = 256.0
margin_bottom = 733.0
focus_mode = 0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
enabled_focus_mode = 0
text = "PLAY"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="how_to_btn" type="Button" parent="main_menu"]
margin_top = 736.0
margin_right = 256.0
margin_bottom = 869.0
focus_mode = 0
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
enabled_focus_mode = 0
text = "HOW TO PLAY"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="main_menu_animation" parent="main_menu" instance=ExtResource( 5 )]
position = Vector2( 408, 1024 )

[node name="move_tween" type="Tween" parent="main_menu"]

[connection signal="pressed" from="level_buttons/back_button" to="." method="_on_back_button_pressed"]
[connection signal="pressed" from="main_menu/play_btn" to="." method="_on_play_btn_pressed"]
[connection signal="pressed" from="main_menu/how_to_btn" to="." method="_on_how_to_btn_pressed"]
